0029749: Samples - Inspector tool - remove "modified" column in TNaming_NamedShape presentation